--- a/netron/index.html
+++ b/netron/index.html
@@ -179,6 +179,14 @@
     <script type='text/javascript' src='source/js/view-sidebar.js'></script>
     <script type='text/javascript' src='source/js/view.js'></script>
     <script type='text/javascript' src='source/js/index.js'></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'UA-147662084-1');
+    </script>
 </body>
 
 </html>
