[example] Move third-party js codes to static/lib

--- a/examples/emotion_analysis/index.html
+++ b/examples/emotion_analysis/index.html
@@ -356,8 +356,8 @@
   <script src='../static/lib/easing/easing.js'></script>
   <script src='../static/lib/stickyjs/sticky.js'></script>
   <script src='../static/lib/greensock/tweenmax.js'></script>
-  <script src='../third_party/stats.customized.min.js'></script>
-  <script src='../third_party/protobuf.min.js'></script>
+  <script src='../static/lib/stats.customized.min.js'></script>
+  <script src='../static/lib/protobuf.min.js'></script>
   <script src='../../dist/webml-polyfill.js'></script>
   <script src='../util/base.js'></script>
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
