--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -429,8 +429,7 @@
   <script src='../static/lib/easing/easing.js'></script>
   <script src='../static/lib/stickyjs/sticky.js'></script>
   <script src='../static/lib/greensock/tweenmax.js'></script>
-  <script src='../third_party/stats.customized.min.js'></script>
-
+  <script src='../static/lib/stats.customized.min.js'></script>
   <script src='../../dist/webml-polyfill.js'></script>
   <script src='../util/base.js'></script>
   <script src='src/helperFunc.js'></script>
@@ -438,7 +437,6 @@
   <script src='src/MaxHeap.js'></script>
   <script src='src/decodePose.js'></script>
   <script src='src/DrawOutputs.js'></script>
-
   <script src='utils.js'></script>
   <script src='../static/js/main.common.js'></script>
   <script src='main.js'></script>
