--- a/workload/index.html
+++ b/workload/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>WebNN Workload</title>
-    <link rel="stylesheet" href="../examples/third_party/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href='../examples/static/lib/bootstrap/css/bootstrap.min.css' rel='stylesheet' crossorigin="anonymous">
     <style>
       body {
         font-size: 13px;
@@ -134,7 +134,7 @@
     <script src="../dist/webml-polyfill.js"></script>
     <script src="../examples/util/base.js"></script>
     <script src="../examples/util/faceDetector.js"></script>
-    <script src="../examples/third_party/protobuf.min.js"></script>
+    <script src="../examples/static/lib/protobuf.min.js"></script>
     <script src="../examples/util/tflite/flatbuffers/js/flatbuffers.js"></script>
     <script src="../examples/util/tflite/schema/schema_generated.js"></script>
     <script src="../examples/util/tflite/TfLiteModelUtils.js"></script>
