[example] Fix small bug for face recognition
Signed-off-by: cuiyanx <yanx.cui@intel.com>

--- a/examples/face_recognition/index.html
+++ b/examples/face_recognition/index.html
@@ -296,7 +296,7 @@
     </div>
   </section>
 
-  <canvas id='detecorCanvas'></canvas>
+  <canvas id='detectorCanvas'></canvas>
   <canvas id='recognitionCanvas'></canvas>
   <video id='video' autoplay playsinline></video>
 
