--- a/examples/speech_commands/index.html
+++ b/examples/speech_commands/index.html
@@ -440,6 +440,7 @@
   <script src='../static/lib/protobuf.min.js'></script>
   <script src='../../dist/webml-polyfill.js'></script>
   <script src='../util/base.js'></script>
+  <script src='../util/mfcc/mfcc.js'></script>
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
