--- a/examples/speech_commands/index.html
+++ b/examples/speech_commands/index.html
@@ -436,15 +436,19 @@
   <script src='../static/lib/easing/easing.js'></script>
   <script src='../static/lib/stickyjs/sticky.js'></script>
   <script src='../static/lib/greensock/tweenmax.js'></script>
-  <script src='../third_party/stats.customized.min.js'></script>
-  <script src='../third_party/protobuf.min.js'></script>
+  <script src='../static/lib/stats.customized.min.js'></script>
+  <script src='../static/lib/protobuf.min.js'></script>
   <script src='../../dist/webml-polyfill.js'></script>
   <script src='../util/base.js'></script>
+  <script src='../util/mfcc/mfcc.js'></script>
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
   <script src='../util/tflite/TFliteModelImporter.js'></script>
   <script src='../util/onnx/onnx.js'></script>
+  <script src='../util/openvino/openvino.js'></script>
+  <script src='../util/openvino/OpenVINOModelUtils.js'></script>
+  <script src='../util/openvino/OpenVINOModelImporter.js'></script>
   <script src='utils.js'></script>
   <script src='../static/js/main.common.js'></script>
   <script src='main.js'></script>
