[test] Upadted test/README.md        Renamed test/realmodel folder name  to test/realmodel-test        Moved test/base/base.js into test/unit-test, and renamed it to test-base.js

--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
       window.onload = setOptions;
       mocha.setup('bdd');
     </script>
-    <script src="./base/base.js"></script>
+    <script src="./unit-test/test-base.js"></script>
     <script src="./unit-test/test-Model.js"></script>
     <script src="./unit-test/test-Compilation.js"></script>
     <script src="./unit-test/test-Execution.js"></script>
